<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.fragment.ricerca.EmotionsFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/titolo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/come_vuoi_sentirti"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="180dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/divertito"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/coraggioso"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="240dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/curioso"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/acculturato"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="300dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/spaventato"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/emotional"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="360dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/malinconico"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            android:text="@string/avventurioso"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="420dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/triste"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/energico"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/ispirato"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="480dp"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_margin="5dp"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="@string/romantico"/>

    </LinearLayout>

    <Button
        android:id="@+id/confermaEmozioneButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/conferma"
        android:layout_marginTop="580dp"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_gravity="center_horizontal">
    </Button>

</FrameLayout>