<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FiltroTipoActivity"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/titolo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi_al_tuo_account"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:text="@string/film"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:text="@string/serie_tv"/>

    <com.google.android.material.chip.Chip
        style="@style/Widget.Material3.Chip.Filter"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:text="@string/entrambi"/>

    <Button
        android:id="@+id/confermaTipoButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/conferma"
        android:layout_marginTop="60dp"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_gravity="center_horizontal" >
    </Button>
</LinearLayout>