<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sfondo"
    tools:context=".FiltroTipoActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/titolo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi_al_tuo_account"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/film"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">
    </Button>

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/serie_tv"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">
    </Button>

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:text="@string/entrambi"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">
    </Button>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu" />

</LinearLayout>