<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="140dp"
        app:srcCompat="@drawable/icona2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi_al_tuo_account"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/textBox"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:hintTextAppearance="@style/TextAppearance.Material3.BodySmall"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/textBox"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:hintTextAppearance="@style/TextAppearance.Material3.BodySmall"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hai_dimenticato_la_password"
        style="@style/Widget.Material3.Button.TextButton"
        android:gravity="start"
        android:layout_marginStart="55dp" >
    </Button>

    <Button
        android:id="@+id/accediButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_gravity="center_horizontal" >
    </Button>

    <Button
        android:id="@+id/creaAccountButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/crea_account"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal" >
    </Button>

</LinearLayout>